# AI-Resume-Intelligence-System

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
AI-Resume-Intelligence-System/: main.py
AI-Resume-Intelligence-System/tests/: test_ats.py
AI-Resume-Intelligence-System/ui/: streamlit_app.py
data/: ats_keywords.json  master_resume.json  master_resume.template.json  profile.production.json
data/personas/: ai_developer.json  backend_developer.json  frontend_developer.json  python_developer.json  software_developer.json
docs/: ARCHITECTURE.md  PROJECT_ARCHITECTURE.md  ROADMAP.md  api_reference.md  deployment.md  developer_setup.md  docker_guide.md  testing_strategy.md
scripts/: docker_build.ps1  docker_run.ps1  run.ps1  setup.ps1
src/ai/: gemini_client.py  prompt_engine.py  provider.py
src/ats/: ats_scorer.py  keyword_extractor.py  skill_gap.py
src/export/: docx_export.py  pdf_export.py
src/models/: __init__.py  resume_models.py
src/parser/: company_analyzer.py  job_parser.py  linkedin_parser.py  synthetic_jd_generator.py
src/resume/: cover_letter.py  persona_selector.py  project_ranker.py  resume_generator.py
src/security/: __init__.py
tests/: test_ats.py  test_ats_scorer.py  test_config.py  test_constants.py  test_docker.py  test_helpers.py  test_persona_selector.py  test_validators.py
ui/: streamlit_app.py
(+12 files in other folders)
