[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-resume-intelligence-system"
version = "0.1.0"
description = "AI Resume Intelligence System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.35.0",
    "google-genai>=1.0.0",
    "groq>=0.9.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.7.0",
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.1.0",
    "reportlab>=4.1.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]
